src/snapshots/skate__ast_tests__functions-4.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: baz
  span:
    - 3
    - 6
    - 100
args:
  node:
    - name:
        node: y
        span:
          - 7
          - 8
          - 100
      ty:
        node: Int
        span:
          - 9
          - 12
          - 100
    - name:
        node: z
        span:
          - 13
          - 14
          - 100
      ty:
        node: String
        span:
          - 15
          - 21
          - 100
  span:
    - 6
    - 22
    - 100
ret: ~
body:
  node: []
  span:
    - 22
    - 24
    - 100

