src/snapshots/skate__ast_tests__functions-5.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: baz
  span:
    - 3
    - 6
    - 100
args:
  node:
    - name:
        node: y
        span:
          - 7
          - 8
          - 100
      ty:
        node: Int
        span:
          - 9
          - 12
          - 100
    - name:
        node: z
        span:
          - 14
          - 15
          - 100
      ty:
        node: String
        span:
          - 16
          - 22
          - 100
  span:
    - 6
    - 23
    - 100
ret: ~
body:
  node: []
  span:
    - 23
    - 25
    - 100

