src/snapshots/skate__ast_tests__functions-6.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: baz
        span:
          start: 3
          end: 6
          file_id: 100
      args:
        node:
          - name:
              node: y
              span:
                start: 7
                end: 8
                file_id: 100
            ty:
              node: Int
              span:
                start: 9
                end: 12
                file_id: 100
          - name:
              node: z
              span:
                start: 14
                end: 15
                file_id: 100
            ty:
              node: String
              span:
                start: 16
                end: 22
                file_id: 100
        span:
          start: 6
          end: 23
          file_id: 100
      ret:
        node: Int
        span:
          start: 27
          end: 30
          file_id: 100
      body:
        node: []
        span:
          start: 31
          end: 33
          file_id: 100
    span:
      start: 0
      end: 33
      file_id: 100

