src/snapshots/skate__ast_tests__functions-7.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: baz
  span:
    - 3
    - 6
args:
  node:
    - name:
        node: y
        span:
          - 7
          - 8
      ty:
        node: Int
        span:
          - 9
          - 12
  span:
    - 6
    - 14
ret:
  node: Bool
  span:
    - 16
    - 20
body:
  node: []
  span:
    - 22
    - 24

