src/snapshots/skate__ast_tests__functions-8.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: baz
  span:
    - 3
    - 6
    - 100
args:
  node: []
  span:
    - 6
    - 8
    - 100
ret:
  node: String
  span:
    - 10
    - 16
    - 100
body:
  node: []
  span:
    - 16
    - 18
    - 100

