src/snapshots/skate__ast_tests__functions-9.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: a
  span:
    start: 3
    end: 4
    file_id: 100
args:
  node: []
  span:
    start: 4
    end: 6
    file_id: 100
ret: ~
body:
  node:
    - Expr:
        node:
          Var:
            node: a
            span:
              start: 7
              end: 8
              file_id: 100
        span:
          start: 7
          end: 8
          file_id: 100
    - Expr:
        node:
          Var:
            node: b
            span:
              start: 9
              end: 10
              file_id: 100
        span:
          start: 9
          end: 10
          file_id: 100
    - Expr:
        node:
          Var:
            node: c
            span:
              start: 11
              end: 12
              file_id: 100
        span:
          start: 11
          end: 12
          file_id: 100
  span:
    start: 6
    end: 14
    file_id: 100

