src/snapshots/skate__ast_tests__functions.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: main
  span:
    - 3
    - 7
    - 100
args:
  node: []
  span:
    - 7
    - 9
    - 100
ret: ~
body:
  node: []
  span:
    - 9
    - 11
    - 100

