src/snapshots/skate__ast_tests__items.snap
---
source: src/ast_tests.rs
expression: f

---
Function:
  node:
    name:
      node: main
      span:
        - 3
        - 7
    args:
      node: []
      span:
        - 7
        - 9
    ret: ~
    body:
      node: []
      span:
        - 9
        - 11
  span:
    - 0
    - 11

