src/snapshots/skate__ast_tests__progs.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: hello
        span:
          - 3
          - 8
          - 100
      args:
        node: []
        span:
          - 8
          - 10
          - 100
      ret: ~
      body:
        node:
          - Print:
              node:
                Literal:
                  node:
                    String: hello
                  span:
                    - 18
                    - 25
                    - 100
              span:
                - 18
                - 25
                - 100
        span:
          - 11
          - 27
          - 100
    span:
      - 0
      - 27
      - 100
- Function:
    node:
      name:
        node: world
        span:
          - 43
          - 48
          - 100
      args:
        node: []
        span:
          - 48
          - 50
          - 100
      ret: ~
      body:
        node:
          - Print:
              node:
                Literal:
                  node:
                    String: world
                  span:
                    - 59
                    - 66
                    - 100
              span:
                - 59
                - 66
                - 100
        span:
          - 51
          - 69
          - 100
    span:
      - 40
      - 69
      - 100
- Function:
    node:
      name:
        node: main
        span:
          - 85
          - 89
          - 100
      args:
        node: []
        span:
          - 89
          - 91
          - 100
      ret: ~
      body:
        node:
          - Expr:
              node:
                Call:
                  - node:
                      Var:
                        node: hello
                        span:
                          - 110
                          - 115
                          - 100
                    span:
                      - 110
                      - 115
                      - 100
                  - []
              span:
                - 110
                - 117
                - 100
          - Expr:
              node:
                Call:
                  - node:
                      Var:
                        node: world
                        span:
                          - 135
                          - 140
                          - 100
                    span:
                      - 135
                      - 140
                      - 100
                  - []
              span:
                - 135
                - 142
                - 100
        span:
          - 92
          - 157
          - 100
    span:
      - 82
      - 157
      - 100

