src/snapshots/skate__ast_tests__stmt-2.snap
---
source: src/ast_tests.rs
expression: f

---
Print:
  node:
    Literal:
      node:
        String: "2"
      span:
        start: 6
        end: 9
        file_id: 100
  span:
    start: 6
    end: 9
    file_id: 100

