src/snapshots/skate__ast_tests__stmt-3.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: rand
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - - Print:
                node:
                  BinOp:
                    - node:
                        Literal:
                          node:
                            String: "2"
                          span:
                            start: 17
                            end: 20
                            file_id: 100
                      span:
                        start: 17
                        end: 20
                        file_id: 100
                    - node: Plus
                      span:
                        start: 21
                        end: 22
                        file_id: 100
                    - node:
                        Literal:
                          node:
                            String: "3"
                          span:
                            start: 23
                            end: 26
                            file_id: 100
                      span:
                        start: 23
                        end: 26
                        file_id: 100
                span:
                  start: 17
                  end: 26
                  file_id: 100
          - ReturnExpr
        span:
          start: 9
          end: 28
          file_id: 100
    span:
      start: 0
      end: 28
      file_id: 100

